# website

./: .gitignore  Cargo.toml
.github/workflows/: build-deploy.yml
assets/: _headers  style.css
src/: main.rs
templates/: about.html  base.html  components.html  index.html  post.html  posts.html  rss.xml
